test-cases/negative/test_158_missing_type_keyword.lay
# negative test: variable declaration missing 'type' keyword
# expected: parser should reject this

the variable x of String is 'hello'


